# etsyv3

./: .gitignore  README.md  pyproject.toml  setup.cfg
etsyv3/: __init__.py  etsy_api.py
etsyv3/enums/: __init__.py  listing.py  shipping_providers.py
etsyv3/models/: __init__.py  file_request.py  listing_file.py  listing_inventory.py  listing_property.py  listing_request.py  product.py  receipt_request.py  shop_request.py
etsyv3/util/: __init__.py  todict.py
etsyv3/util/auth/: __init__.py  auth_helper.py
tests/: mock_helpers.py  test_auth_helper.py  test_etsy_api.py  test_listing.py
tests/integration/: integration_helpers.py  test_upload_listing_file.py  test_upload_listing_image.py
