[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etsyv3"
version = "0.0.3"
authors = [
    { name = "anitabyte", email = "anita@anitabyte.xyz" },
]
description = "A package to support the Etsy Open API v3"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.1",
    "requests-oauthlib>=1.3.1"
]

[project.optional-dependencies]
test = [
    'coverage>=5.0.3',
    'pytest',
    'pytest-benchmark[histogram]>=3.2.1',
    'black',
    'isort'
]

[tool.setuptools]
packages = ["etsyv3", "etsyv3.models", "etsyv3.enums", "etsyv3.util", "etsyv3.util.auth"]

[tool.isort]
src_paths = ["etsyv3", "tests"]

[project.urls]
"Homepage" = "https://github.com/anitabyte/etsyv3"
"Bug Tracker" = "https://github.com/anitabyte/etsyv3/issues"
